--- a/config/database.yml
+++ b/config/database.yml
@@ -8,6 +8,11 @@ default: &default
   adapter: sqlite3
   pool: 5
   timeout: 5000
+  
+development:
+  <<: *default
+  database: db/test.sqlite3
+
 
 production:
   <<: *default
