--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,9 @@ development:
   <<: *default
   database: db/test.sqlite3
 
+test:
+  <<: *default
+  database: db/test.sqlite3
 
 production:
   <<: *default
